BuildHughes/translation-tool/inputs/source_meta/objects/Hughes_Svc_Exception_Log__c.object
<CustomObject>
    <description>To log all the exception occurring in the code</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesSvc_Exception_Description__c</fullName>
        <description>To hold the exception description</description>
        <label>Exception Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HughesSvc_Exception_Type__c</fullName>
        <description>To hold exception type</description>
        <label>Exception Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HughesSvc_StackTrace__c</fullName>
        <description>To hold the exception origin</description>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo1-To be replaced by DEV Team</fullName>
                </value>
                <value>
                    <fullName>Provision Data Allowance</fullName>
                </value>
                <value>
                    <fullName>Unprovision Data Allowance</fullName>
                </value>
                <value>
                    <fullName>Fetch Current Usage</fullName>
                </value>
                <value>
                    <fullName>Fetch Historical Usage</fullName>
                </value>
                <value>
                    <fullName>Validate SAN/ESN</fullName>
                </value>
                <value>
                    <fullName>Fetch Account Status</fullName>
                </value>
                <value>
                    <fullName>Fetch SP Voucher Balance</fullName>
                </value>
                <value>
                    <fullName>Update Migrated to Captive Portal Status</fullName>
                </value>
                <value>
                    <fullName>Fetch Voucher Status</fullName>
                </value>
                <value>
                    <fullName>Generate Voucher Batch</fullName>
                </value>
                <value>
                    <fullName>Fetch Voucher Batch Status</fullName>
                </value>
                <value>
                    <fullName>Reverse Voucher</fullName>
                </value>
                <value>
                    <fullName>Void Individual Voucher</fullName>
                </value>
                <value>
                    <fullName>Void Voucher Range</fullName>
                </value>
                <value>
                    <fullName>Fetch Subscriber Details</fullName>
                </value>
                <value>
                    <fullName>Activate Vouchers</fullName>
                </value>
                <value>
                    <fullName>Download Vouchers</fullName>
                </value>
                <value>
                    <fullName>Fetch Account/Contact Information</fullName>
                </value>
                <value>
                    <fullName>Redeem Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClassName__c</columns>
        <columns>HughesSvc_Exception_Description__c</columns>
        <columns>Operation__c</columns>
        <columns>MethodName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>